[project]
name = "medical-triage-env"
version = "0.1.0"
description = "Clinical triage environment using OpenEnv"
authors = [
    {name = "Manideep"}
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.openenv]
entry_point = "app:app"
